--- a/K_Bridge/Pages/Admin/Forums/Topics/List.cshtml
+++ b/K_Bridge/Pages/Admin/Forums/Topics/List.cshtml
@@ -1,6 +1,9 @@
 ﻿@page "{id:int}"
-@model K_Bridge.Pages.Admin.Forums.TopicModel
+@model K_Bridge.Pages.Admin.Forums.Topics.ListModel
 @{
+    ViewData["Title"] = @Model.Topic.Name
+        ;
+
 }
 
 <div class="row account-navigate mt-3 px-5 align-items-center ">
@@ -11,13 +14,12 @@
         <img src="/img/icon_arrow_right_50_dark.png" class="mx-4 mt-2 py-1"
              alt="Tổng quan" width="10" height="20">
         <div class="account-navigate-text custom-cursor-pointer"
-             onclick="window.location.href='/Admin/Forums'">
-            Lập trình
+             onclick="window.location.href='/Admin/Forums/List/@Model.ForumID'">
+            @Model.ForumName
         </div>
         <img src="/img/icon_arrow_right_50_dark.png" class="mx-4 mt-2 py-1"
              alt="Tổng quan" width="10" height="20">
-        <div class="account-navigate-text custom-cursor-pointer "
-             onclick="window.location.href='/Admin/Forums/Topics'">
+        <div class="account-navigate-text custom-cursor-pointer">
             @Model.Topic.Name
         </div>
     </div>
@@ -46,7 +48,25 @@
         <tbody>
             @foreach (var post in Model.Posts)
             {
-                <tr>
+                var statusClass = post.Status switch
+                {
+                    "Pending" => "", // Yellow for pending
+                    "Approved" => "background-color: rgba(0, 212, 98, 0.26)", // Green for accepted
+                    "Rejected" => "background-color: rgba(255, 65, 65, 0.26)", // Red for rejected
+                    "Blocked" => "background-color: #B8B8B8", // Grey for blocked
+                    _ => "bg-light" // Default light color
+                };
+
+                var postStatus = post.Status switch
+                {
+                    "Pending" => "Chờ duyệt",
+                    "Approved" => "Đã duyệt",
+                    "Rejected" => "Đã từ chối",
+                    "Blocked" => "Đã khoá",
+                    _ => "Không xác định"
+                };
+
+                <tr style="@statusClass">
                     <th scope="row">@post.ID</th>
                     <td>@post.User.Username</td>
                     <td style="max-width: 500px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">
@@ -56,64 +76,17 @@
                             @:...
                         }
                     </td>
-                    <td>Đã duyệt</td>
+                    <td>
+                        @postStatus
+                    </td>
 
                     <td>@post.CreatedAt.ToString("dd/MM/yyyy")</td>
                     <td>@(post.UpdatedAt?.ToString("dd/MM/yyyy") ?? "")</td>
                     <td>
-                        <a class="text-color-logo" href="/Admin/Forums/Topics/Posts/Preview/@post.ID"> <u>Chi tiết</u> </a>
+                        <a class="text-color-logo" href="/Admin/Forums/Topics/Posts/Preview/@post.ID?userId=@post.User.ID"> <u>Chi tiết</u> </a>
                     </td>
                 </tr>
             }
-            @*             @for (int i = 1; i < 9; i++)
-            {
-            if( i < 7 && i > 2)
-            {
-            <tr style="background-color: rgba(0, 212, 98, 0.26)">
-            <th scope="row">@i</th>
-            <td>test1</td>
-            <td>Xin đề cương môn..</td>
-            <td >Đã duyệt</td>
-
-            <td>21/12/2024</td>
-            <td>21/12/2026</td>
-            <td>
-            <a class="text-color-logo" href="/Admin/Forums/Topics/Post/Preview"> <u>Chi tiết</u> </a>
-            </td>
-            </tr>
-            }else if(i > 6)
-            {
-            <tr style="background-color: rgba(255, 65, 65, 0.26)">
-            <th scope="row">@i</th>
-            <td>test1</td>
-            <td>Xin đề cương môn..</td>
-            <td>Đã từ chối</td>
-
-            <td>21/12/2024</td>
-            <td>21/12/2026</td>
-            <td>
-            <a class="text-color-logo" href="/Admin/Forums/Topics/Post/Preview"> <u>Chi tiết</u> </a>
-            </td>
-            </tr>
-            }
-            else
-            {
-            <tr>
-            <th scope="row">@i</th>
-            <td>test1</td>
-            <td>Xin đề cương môn..</td>
-            <td>Đang chờ</td>
-
-            <td>21/12/2024</td>
-            <td>21/12/2026</td>
-            <td>
-            <a class="text-color-logo" href="/Admin/Forums/Topics/Post/Preview"> <u>Chi tiết</u> </a>
-            </td>
-            </tr>
-            }
-
-            }
-            *@
         </tbody>
     </table>
 </div>
