--- a/K_Bridge/wwwroot/css/Newest.css
+++ b/K_Bridge/wwwroot/css/Newest.css
@@ -1,10 +1,29 @@
-﻿.filter-forum {
+﻿#filterFrame {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-out, opacity 0.3s ease-out, margin-bottom 0.3s ease-out;
+    opacity: 0;
+    margin-bottom: 0;
+}
+
+    #filterFrame.active {
+        max-height: 500px; /* Điều chỉnh giá trị này tùy theo nội dung thực tế của bạn */
+        opacity: 1;
+        margin-bottom: 1rem;
+    }
+
+.filter-forum {
     border: solid 1px #FFBE98;
     color: #8E6745;
     border-radius: 5px;
     width: 17%;
     font-size: 15px;
+    transition: background-color 0.3s ease;
 }
+
+    .filter-forum.active {
+        background-color: #FFF0E6;
+    }
 
 .newest-card-stat {
     color: #493422;
@@ -101,3 +120,41 @@
     .lidi i.down.set {
         background: #dd3d3d;
     }
+
+
+.custom-radio-group {
+    width: 100%;
+    gap: 10px;
+}
+
+.custom-radio {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+}
+
+    .custom-radio input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+    }
+
+.radio-text {
+    width: 100%;
+    display: inline-block;
+    padding: 5px 16px;
+    background-color: #FFE8DA;
+    border: 1px solid #FFFFFF;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.custom-radio input:checked + .radio-text {
+    background-color: #8E6745;
+    color: #FFF0E6;
+}
+
+.custom-radio input:not(:checked) + .radio-text {
+    background-color: #FFE8DA;
+    color: #8E6745;
+}
