--- a/K_Bridge/wwwroot/css/Newest.css
+++ b/K_Bridge/wwwroot/css/Newest.css
@@ -158,3 +158,199 @@
     background-color: #FFE8DA;
     color: #8E6745;
 }
+
+.custom-select-wrapper {
+    position: relative;
+    user-select: none;
+    width: 100%;
+}
+
+.custom-select {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid #8E6745;
+    border-radius: 0.25rem;
+}
+
+.custom-select__trigger {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    font-weight: 700;
+    color: #493422;
+    background: #FFF0E6;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.custom-options {
+    position: absolute;
+    display: block;
+    top: 100%;
+    left: 0;
+    right: 0;
+    border: 2px solid #8E6745;
+    border-top: 0;
+    background: #fff;
+    transition: all 0.5s;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    z-index: 2;
+}
+
+.custom-select.open .custom-options {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
+}
+
+.custom-option {
+    position: relative;
+    display: block;
+    padding: 0.75rem 1rem;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #493422;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+    .custom-option:hover {
+        cursor: pointer;
+        background-color: #f5f5f5;
+    }
+
+    .custom-option.selected {
+        color: #493422;
+        background-color: #FFF0E6;
+    }
+
+    .custom-option.approved {
+        color: #FFF0E6;
+        background-color: #00D462;
+    }
+
+    .custom-option.rejected {
+        color: #FFF0E6;
+        background-color: #FF4141;
+    }
+
+.custom-select-wrapper {
+    position: relative;
+    user-select: none;
+    width: 100%;
+}
+
+.custom-select {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid #8E6745;
+    border-radius: 0.25rem;
+}
+
+.custom-select__trigger {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    font-weight: 700;
+    color: #493422;
+    background: #FFF0E6;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.custom-options {
+    position: absolute;
+    display: block;
+    top: 100%;
+    left: 0;
+    right: 0;
+    border: 2px solid #8E6745;
+    border-top: 0;
+    background: #fff;
+    transition: all 0.5s;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    z-index: 2;
+}
+
+.custom-select.open .custom-options {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
+}
+
+.custom-option {
+    position: relative;
+    display: block;
+    padding: 0.75rem 1rem;
+    font-size: 1rem;
+    font-weight: 400;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+    .custom-option:hover {
+        cursor: pointer;
+        filter: brightness(90%);
+    }
+
+    .custom-option.approved {
+        color: #FFF0E6;
+        background-color: #00D462;
+    }
+
+    .custom-option.rejected {
+        color: #FFF0E6;
+        background-color: #FF4141;
+    }
+
+.arrow {
+    position: relative;
+    height: 6px;
+    width: 6px;
+    margin-right: 5px;
+}
+
+    .arrow::before, .arrow::after {
+        content: "";
+        position: absolute;
+        bottom: 0px;
+        width: 0.1rem;
+        height: 100%;
+        transition: all 0.5s;
+    }
+
+    .arrow::before {
+        left: -3px;
+        transform: rotate(45deg);
+        background-color: #8E6745;
+    }
+
+    .arrow::after {
+        transform: rotate(-45deg);
+        background-color: #8E6745;
+    }
+
+.open .arrow::before {
+    left: -3px;
+    transform: rotate(-45deg);
+}
+
+.open .arrow::after {
+    transform: rotate(45deg);
+}
+
+.custom-select__trigger span {
+    padding-right: 10px;
+}
