--- a/K_Bridge/Pages/_AdminLayout.cshtml
+++ b/K_Bridge/Pages/_AdminLayout.cshtml
@@ -59,38 +59,8 @@
 
 <body>
     @* Dùng vh-100 d-flex flex-column để bao toàn bộ nội dung *@
-    <div class="vh-100 d-flex flex-column"> 
-        <div id="header-container">
-            <div class="row align-items-center w-100 mr-0">
-                <div class="col-1 d-flex justify-content-end">
-                    <img src="/img/Logo_75.png" class="img-fluid" alt="Logo" width="50" height="50">
-                </div>
-                <div class="col-2 p-0">
-                    <img src="/img/logo_name.png" class="img-fluid" alt="Name" width="100" height="100">
-                </div>
-                <div class="col-7"> </div>
-                <div class="col-1 d-flex p-0">
-                    <div class="position-relative" style="margin-right: 20px;">
-                        <button class="p-2 border-main-color-layout rounded-3" id="notificationButtonAdmin" style="background-color: #493422;">
-                            <img src="~/img/notification50.png" class="img-fluid" alt="Notifications" width="25" height="25">
-                        </button>
-                        <div class="position-absolute fs-12 translate-middle badge rounded-circle bg-danger" id="notificationCountAdmin" style="left:40px;">
-                            <!-- Notification count will be dynamically inserted here -->
-                        </div>
-                        <div id="notificationListAdmin" class="dropdown-menu dropdown-menu-end p-0 " style="display: none; width: 300px; max-height: 400px; overflow-y: auto; background-color:#FDE7D2; cursor: pointer;">
-                            <div class="p-2 border-bottom">
-                                <h6 class="mb-0">Thông báo</h6>
-                            </div>
-                            <div id="notificationItemsAdmin"></div>
-                        </div>
-                    </div>
-                    <img src="/img/avatar_default.png" class="avatar" alt="Avatar">
-                </div>
-                <div class="col-1 username">
-                    @Context.Session.GetString("AdminUsername")
-                </div>
-            </div>
-        </div>
+    <div class="vh-100 d-flex flex-column">
+        <vc:admin-layout-header />
         @* Dùng flex-grow-1 để fill phần còn lại sau header *@
         <div class="row m-0 p-0 flex-grow-1">
             <nav class="col-2 sidebar m-0 p-0">
@@ -109,52 +79,3 @@
 </body>
 </html>
 
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        var notificationCount = 3;
-        var notificationCountElement = document.getElementById('notificationCountAdmin');
-        var notificationList = document.getElementById('notificationListAdmin');
-        var notificationItems = document.getElementById('notificationItemsAdmin');
-        var notificationButton = document.getElementById('notificationButtonAdmin');
-
-        if (notificationCount > 0) {
-            notificationCountElement.innerHTML = notificationCount;
-            notificationCountElement.style.display = 'inline-block';
-
-            var notifications = [
-                { id: 1, message: '12 bài viết mới đang chờ phê duyệt.', time: '2 phút trước' },
-                { id: 2, message: 'Đã có 13 người dùng mới đến diễn đàn K-Bridge', time: '5 phút trước' }
-            ];
-
-            notifications.forEach(function (notification) {
-                var notificationItem = document.createElement('div');
-                notificationItem.className = 'notification-item';
-                notificationItem.innerHTML = `
-                            <div class="notification-content">
-                                <div class="notification-message">${notification.message}</div>
-                                <div class="notification-time d-flex justify-content-end">${notification.time}</div>
-                            </div>
-                        `;
-                notificationItems.appendChild(notificationItem);
-            });
-        } else {
-            notificationCountElement.style.display = 'none';
-        }
-
-        notificationButton.addEventListener('click', function (event) {
-            event.stopPropagation(); // Ngăn sự kiện click lan ra document
-            if (notificationList.style.display === 'none') {
-                notificationList.style.display = 'block';
-            } else {
-                notificationList.style.display = 'none';
-            }
-        });
-
-        // Đóng danh sách thông báo khi click bên ngoài
-        document.addEventListener('click', function (event) {
-            if (!notificationButton.contains(event.target) && !notificationList.contains(event.target)) {
-                notificationList.style.display = 'none';
-            }
-        });
-    });
-</script>
