--- a/K_Bridge/Views/Post/_RepliesPartial.cshtml
+++ b/K_Bridge/Views/Post/_RepliesPartial.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<K_Bridge.Models.ViewModels.ReplyViewModel>
-
+@{
+    var currentUserID = ViewBag.CurrentUser.ID;
+}
 @foreach (var reply in Model)
 {
     <div class="row my-3 m-0" style="border-bottom: 1px solid #8E6745">
@@ -23,25 +25,12 @@
         </div>
         <div class="col-lg-11">
             <div class="d-flex justify-content-end">
-                <button class="p-2 btn-point rounded-2" onclick="showDeleteCommentModal()"><img src="~/img/icon_trash_50.png" height="20" width="20" alt="thr point" /> </button>
-                <div class="modal fade" id="deleteCommentModal" tabindex="-1" aria-labelledby="deleteCommentModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header bg-main-color-layout pb-2">
-                                <h5 class="modal-title text-color-header" id="deleteCommentModalLabel">Xóa bình luận</h5>
-                                <button type="button" class="btn-close text-color-header" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body bg-main-color-layout">
-                                <p class="text-center">Bạn có chắc chắn muốn xóa bình luận này?</p>
-                                <div class="mt-2 d-flex justify-content-evenly">
-                                    <button type="button" class="btn btn-account-log w-25" data-bs-dismiss="modal">Hủy</button>
-                                    <button type="button" class="btn btn-account-edit w-25" onclick="deleteComment()">Xóa</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+                @if (reply.Reply.UserID == currentUserID)
+                {
+                    <button class="p-2 btn-point rounded-2" onclick="showDeleteCommentModal(@reply.Reply.ID)">
+                        <img src="~/img/icon_trash_50.png" height="20" width="20" alt="thr point" />
+                    </button>
+                }
             </div>
             <div class="reply-content">
                 @Html.Raw(reply.Reply.Content)
@@ -53,6 +42,25 @@
         </div>
     </div>
 }
+
+<div class="modal fade" id="deleteCommentModal" tabindex="-1" aria-labelledby="deleteCommentModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-main-color-layout pb-2">
+                <h5 class="modal-title text-color-header" id="deleteCommentModalLabel">Xóa bình luận</h5>
+                <button type="button" class="btn-close text-color-header" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body bg-main-color-layout">
+                <p class="text-center">Bạn có chắc chắn muốn xóa bình luận này?</p>
+                <div class="mt-2 d-flex justify-content-evenly">
+                    <button type="button" class="btn btn-account-log w-25" data-bs-dismiss="modal">Hủy</button>
+                    <button type="button" class="btn btn-account-edit w-25" onclick="deleteComment()">Xóa</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <script>
     document.addEventListener('DOMContentLoaded', (event) => {
@@ -75,12 +83,12 @@
     function lidiReply(inst) {
         // (A) ATTACH HTML
         inst.target.innerHTML = `
-                <span id="reply-like-count-${inst.replyId}" style="display:none">${inst.likeCount}</span>
-                <i class="up" onclick="likeReply(${inst.replyId})"></i>
-                <p class="mt-2 fs-5 fw-bold text-color-logo">${inst.likeCount - inst.dislikeCount}</p>
-                <i class="down" onclick="dislikeReply(${inst.replyId})"></i>
-                <span id="reply-dislike-count-${inst.replyId}" style="display:none">${inst.dislikeCount}</span>
-            `;
+                    <span id="reply-like-count-${inst.replyId}" style="display:none">${inst.likeCount}</span>
+                    <i class="up" onclick="likeReply(${inst.replyId})"></i>
+                    <p class="mt-2 fs-5 fw-bold text-color-logo">${inst.likeCount - inst.dislikeCount}</p>
+                    <i class="down" onclick="dislikeReply(${inst.replyId})"></i>
+                    <span id="reply-dislike-count-${inst.replyId}" style="display:none">${inst.dislikeCount}</span>
+                `;
 
         inst.target.classList.add("lidi");
         inst.up = inst.target.querySelector("i.up");
@@ -117,7 +125,7 @@
     }
 
     // Initialize for each reply
-   
+
     function likeReply(replyId) {
         updateReplyLikeDislike(replyId, true);
     }
@@ -170,13 +178,47 @@
     }</script>
 
 
-    <script>
-          function showDeleteCommentModal() {
-    $('#deleteCommentModal').modal('show');
-  }
+<script>
+    function showDeleteCommentModal(replyId) {
+        document.getElementById('deleteCommentModal').setAttribute('data-reply-id', replyId);
+        $('#deleteCommentModal').modal('show');
+    }
 
-  function deleteComment() {
-    // Thực hiện xóa bình luận ở đây
-    $('#deleteCommentModal').modal('hide');
-  }
-    </script>
+    function deleteComment() {
+        var responseSummary = document.getElementById('detailSummary');
+        responseSummary.innerHTML = ''; // Xóa nội dung cũ
+
+
+        const replyId = $('#deleteCommentModal').data('reply-id');
+        fetch(`/Post/DeleteReply?replyId=${replyId}`, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            }
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    responseSummary.innerHTML = '<p>Xoá bình luận thành công.</p>';
+                    responseSummary.style.display = 'block';
+                    showToast('liveToastDetail');
+
+                    document.querySelector(`#reply-like-dislike-${replyId}`).closest('.row').remove();
+                    $('#deleteCommentModal').modal('hide');
+                }
+                else {
+                    if (data.messages != null) {
+                        responseSummary.innerHTML = `<p>${data.messages}</p>`;
+                        responseSummary.style.display = 'block';
+                        showToast('liveToastDetail');
+                    } else {
+                        responseSummary.innerHTML = '<p>Có lỗi xảy ra trong quá trình xử lý.</p>';
+                        responseSummary.style.display = 'block';
+                        showToast('liveToastDetail');
+
+                        setTimeout(() => {}, 2000);
+                    }
+                }
+            })
+            .catch(error => console.error('Error:', error));
+    }</script>
